# BombMania-Reloaded

./: CMakeLists.txt  Dockerfile  bombmania.kdevelop  build.sh  config.h.cmake
include/: bombmania.h  controls.h  game.h  module.h  player.h  settings.h  support.h  world.h
include/gui/: cegui.h  ingameMenu.h  loading.h  mainmenu.h  messageBox.h  newGame.h  window.h
include/objectLoader/: 3dsloader.h  loader.h  mat_vect.h  object.h  texture.h
include/opengl/: control.h  draw.h  gameOpengl.h  objects.h  opengl.h  playerOpengl.h  worldOpengl.h
include/xml/: xml.h
lib/: CMakeLists.txt
lib/gui/: CMakeLists.txt  callbacks.cpp  cegui.cpp  ingameMenu.cpp  loading.cpp  mainmenu.cpp  messageBox.cpp  newGame.cpp  window.cpp
lib/objectLoader/: 3dsloader.cpp  CMakeLists.txt  loader.cpp  main.cpp  mat_vect.cpp  object.cpp  texture.cpp
lib/opengl/: CMakeLists.txt  control.cpp  draw.cpp  gameOpengl.cpp  objects.cpp  opengl.cpp  playerOpengl.cpp  worldOpengl.cpp
lib/xml/: CMakeLists.txt  xml.cpp
res/: CMakeLists.txt
res/gui/: bombmania.ceed  bombmania.layout  bombmania_old.layout
res/levels/: default.xml
res/models/: asteroid01.3ds  asteroid02.3ds  asteroid03.3ds  fighter01.3ds  fighter02.3ds  mine.3ds  sphere.3ds  stars.3ds
res/objects/: asteroid_unbreakable.xml
src/: CMakeLists.txt  bombmania.cpp  controls.cpp  game.cpp  player.cpp  settings.cpp  support.cpp  world.cpp
win32/include/: zconf.h
