FILE(GLOB BITMAPS bitmaps/*.bmp)
FILE(GLOB BITMAPS_PNG bitmaps/*.png)
INSTALL(FILES ${BITMAPS} ${BITMAPS_PNG} DESTINATION ${BOMBMANIA_DATADIR}/textures)

FILE(GLOB MODELS models/*.3ds)
INSTALL(FILES ${MODELS} DESTINATION ${BOMBMANIA_DATADIR}/models)

FILE(GLOB LEVELS levels/*.xml)
INSTALL(FILES ${LEVELS} DESTINATION ${BOMBMANIA_DATADIR}/levels)

FILE(GLOB GUI_LOOK gui/Taharez*.*)
FILE(GLOB GUI_LAYOUT gui/*.layout)
FILE(GLOB GUI_FONT gui/Com*.*)
INSTALL(FILES ${GUI_LOOK} ${GUI_LAYOUT} ${GUI_FONT} DESTINATION ${BOMBMANIA_DATADIR}/gui)
